[tool.poetry]
name = "delivery-poetry"
version = "0.1.0"
description = ""
authors = ["Tran Ly Minh Tuan <tuan.tran_a@virtuos-sparx.com>"]
readme = "README.md"
packages = [{include = "delivery_poetry"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.2"
hab = {git = "https://github.com/blurstudio/hab"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
